--- a/healthWebApp/src/pages/FileUpload/styles.sass
+++ b/healthWebApp/src/pages/FileUpload/styles.sass
@@ -2,7 +2,7 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
 
-.photoTaking
+.fileUpload
   background-image: url("../../assets/images/wallpaper4.png")
   background-size: cover
   height: 100vh
@@ -25,18 +25,18 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1)
     z-index: 999
 
-    .photoTaking__backButton, .photoTaking__fi-more 
+    .fileUpload__backButton, .fileUpload__fi-more 
       background-color: transparent
       border: none
       cursor: pointer
 
-    .photoTaking__backButton 
+    .fileUpload__backButton 
       font-size: 20px
     
-    .photoTaking__fi-more 
+    .fileUpload__fi-more 
       font-size: 20px
 
-    .photoTaking__pageDescription 
+    .fileUpload__pageDescription 
       font-size: 14px
       color: $tertiary-text-color
       
@@ -57,10 +57,15 @@
     font-family: $secondary-font
     font-weight: $regular-weight
     margin-top: 15px
+    margin-left: 30px
+    margin-right: 30px
+    text-align: center
   &__container--options
     display: grid
     justify-content: space-around
     margin-top: 20px
+    margin-right: 20px
+    margin-left: 20px
     gap: 25px
   &__container--title
     @include subtitleH3()
