--- a/healthWebApp/src/pages/Home/styles.sass
+++ b/healthWebApp/src/pages/Home/styles.sass
@@ -14,6 +14,7 @@ html, body
     justify-content: center
     align-items: center
 
+
 .container__home
     margin-top: -700px
 
@@ -94,3 +95,24 @@ html, body
         @include buttonStyle2()
         gap: 20px
         margin: 10px
+
+.home__topBar
+    max-width: $mobile-width
+    width: 100%
+    height: 60px
+    position: fixed
+    top: 0
+    left: 25px
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 10px 20px
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1)
+    z-index: 999
+
+.home__backButton, .home__fi-more 
+    background-color: transparent
+    border: none
+    cursor: pointer
+
